--- a/Projects.html
+++ b/Projects.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Projects</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <!-- start of navigation-->
-    <a href="index.html">Home</a>
-    <a href="About.html">About Me</a>
+    <a class="pagelink" href="index.html">Home</a>
+    <a class="pagelink" href="About.html">About Me</a>
       <!-- end of navigation-->
   </head>
   <body>
