--- a/index.html
+++ b/index.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+
     <!-- start Google Fonts UbuntuMono-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   <!-- end Google Fonts UbuntuMono-->
-    <div id="meta-index">
+
+      <div id="meta-index">
         <!-- start of meta tags-->
-        <meta charset="utf-8">
-     <meta name="keywords" content="Paul Planteur,Planteur,Planteur.dev">
-     <meta name="description" content="Planteur.dev">
-     <meta name="author" content="Paul Planteur">
-     <meta http-equiv="refresh" content="60">
-     <!-- end of meta tags-->
-    </div>
+         <meta charset="utf-8">
+          <meta name="keywords" content="Paul Planteur,Planteur,Planteur.dev">
+           <meta name="description" content="Planteur.dev">
+          <meta name="author" content="Paul Planteur">
+         <meta http-equiv="refresh" content="60">
+        <!-- end of meta tags-->
+
+      </div>
   <title>Paul Planteur</title>
      <link rel="stylesheet" type="text/css" href="style.css">
-        <!-- start of navigation-->
-     <a href="Projects.html">My Projects</a>
-     <a href="About.html">About Me</a>
+     <!-- start of navigation-->
+     <a class="pagelink" href="Projects.html">My Projects</a>
+     <a class="pagelink" href="About.html">About Me</a>
        <!-- end  of navigation-->
-  </head>
+         </head>
    <body>
-    <h2>Paul Planteur</h2>
-    <p>On my website you will allways ne informed what my current projects are.</p>
+
+     <p>On my website you will allways ne informed what my current projects are.</p>
+
+
   </body>
-<footer>
-   <hr>
- <a href="https://github.com/PaulPlanteur">Github</a>
- <a href="https://www.qon-esports.com">Qon-Esports</a>
+<footer class="footer">
+   <div class="weblinks">
+
+   </div>
+
+
+
  </footer>
 </html>
