--- a/About.html
+++ b/About.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>About Me</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
       <!-- start of navigation-->
-    <a href="index.html">Home</a>
-    <a href="Projects.html">My Projects</a>
+    <a class="pagelink" href="index.html">Home</a>
+    <a class="pagelink" href="Projects.html">My Projects</a>
       <!-- end of navigation-->
   </head>
   <body>
